--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,48 +9,63 @@
 
           <div class="field">
             <%= f.label :nickname, "ユーザー名" %><br />
-            <%= f.text_field :nickname %>
+            <%= f.text_field :nickname, class: "format" %>
           </div>
 
           <div class="field">
             <%= f.label :email, "メールアドレス" %><br />
-            <%= f.email_field :email %>
+            <%= f.email_field :email, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :password, "パスワード（6文字以上）" %><br />
-            <%= f.password_field :password %>
+            <%= f.password_field :password, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :password_confirmation, "パスワード再入力" %><br />
-            <%= f.password_field :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :family_name, "姓" %><br />
-            <%= f.text_field :family_name %>
+            <%= f.text_field :family_name, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :first_name, "名" %><br />
-            <%= f.text_field :first_name %>
+            <%= f.text_field :first_name, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :family_name_kana, "姓カナ" %><br />
-            <%= f.text_field :family_name_kana %>
+            <%= f.text_field :family_name_kana, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :first_name_kana, "名カナ" %><br />
-            <%= f.text_field :first_name_kana %>
+            <%= f.text_field :first_name_kana, class: "format"  %>
           </div>
 
           <div class="field">
             <%= f.label :club_team, "クラブチーム名" %><br />
-            <%= f.text_field :club_team %>
+            <%= f.text_field :club_team, class: "format"  %>
           </div>
+
+           <div class='input-birth-wrap'>
+           <%= f.label :birth_day, "生年月日",class: "bday" %><br />
+           <%= raw sprintf(
+                  f.date_select(
+                    :birth_day,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+              </div>
 
           <div class="actions">
             <%= f.submit "新規登録", class: :form__btn %>
