--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,20 +43,10 @@
             <%= f.text_field :club_team, class: "format"  %>
           </div>
 
-           <div class='input-birth-wrap'>
-           <%= f.label :birth_day, "生年月日",class: "bday" %><br />
-           <%= raw sprintf(
-                  f.date_select(
-                    :birth_day,
-                    class:'select-birth',
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 5),
-                    date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-              </div>
+          <div class='input-birth-wrap'>
+          <%= f.label :birth_day, "生年月日" %><br />
+          <%= f.date_field :birth_day, class: "format"  %>
+          </div>
 
           <div class="actions">
             <%= f.submit "新規登録", class: :form__btn %>
