Revert "index_view構成考案"
This reverts commit 5f6d515c66343930e0ce887aa5844217e114c418.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gym Score</title>
+    <title>Gym</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
